# upstage_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  DEVELOPER_GUIDE.md  README.md  README_MULTIMACHINE.md  conftest.py  create-migration.sh  docker-firewall-config.md  pycoverage-script.sh  pyproject.toml  pytest.ini  requirements.txt  startup.sh
.github/workflows/: ci.yml
alembic/: env.py
app_containers/: Dockerfile  Dockerfile_backups  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  run_docker_compose.sh  run_docker_compose_dev.sh  run_docker_compose_prod.sh
config_scripts/: add_mqtt_cert_crontab.sh
config_scripts/environments/: generate_environments_script.sh
configuration_scripts/environments/: env_app_template.py  generate_environments_script.sh
configuration_scripts/multiple-containers/: Dockerfile  Dockerfile.upstage_email  Dockerfile.upstage_event_archive  Dockerfile.upstage_stats  docker-compose.yaml
configuration_scripts/single-container/: docker-compose.yaml  startup.sh
configuration_scripts/system/mqtt_server/: local_mosquitto.conf  mosquitto.conf  pw.txt
container_scripts/mqtt_server/: Dockerfile  README.md  add_mqtt_cert_crontab.sh  docker_load.sh  local_mosquitto.conf  mosquitto.conf  mosquitto_renewal.sh  pw.txt
dashboard/demo/seed/: demo_stage_seed.json
general_tests/: mqtt_connectivity_test.py
initial_scripts/: logrotate_for_docker.commands  nginx_template_for_app_machines.conf  nginx_template_for_front_end_machines.conf  nginx_template_for_svc_machines.conf  setup-docker-ports.sh  setup-os.sh  setup-your-domain.sh
initial_scripts/environments/: env_app_template.py  generate_environments_script.sh  generate_jitsi_passwords.sh  jitsi_env_template.txt  run_docker_compose_service_template.txt
initial_scripts/nginx_templates/: nginx_template_for_app_machines.conf  nginx_template_for_streaming_machines.conf  nginx_template_for_svc_machines.conf
initial_scripts/post_install/: generate_cipher_key.sh  jitsi-cert-cron-script.sh  scaffold_base_media.sh
initial_scripts/prosody_cert_scripts/: prosody_cert_cron_update.sh
installation/: .gitignore  README.md  install_single_host.sh  state.env.example
installation/phases/: 10_os.sh  20_collect_domains.sh  30_prepare_svc_app_layout.sh  40_generate_secrets.sh  45_sync_load_env.sh  50_certificates.sh  51_nginx_render_full.sh  60_compose_svc.sh  70_compose_app.sh  75_docker_firewall.sh  80_streaming_jitsi.sh  90_frontend.sh
mail_containers/: docker-compose.yaml  run_docker_compose.sh
migration_scripts/: db_data_migration.py  run_data_migration.sh  run_restore_assets.sh  run_update_password.py  run_update_password.sh
multiple-containers/: Dockerfile  Dockerfile.upstage_email  Dockerfile.upstage_event_archive  Dockerfile.upstage_stats  docker-compose.yaml
scripts/: alembic.ini  backfill_video_posters.py  backup_to_local_drive.py  generate_cipher_key.sh  run_bootstrap.py  run_event_archive.py  run_event_archive.sh  run_scaffold_load.py  run_scaffold_load.sh  run_script.py  run_upstage_email.py  run_upstage_stats.py  run_upstage_stats.sh  setup-os.sh  setup-pre-commit.py  start_upstage.sh  uvicorn_log_config.json  verify.sh
scripts/devtools/: terminal_colors.py  wipe_dev.py
scripts/hooks/: check_commit_msg.sh
service_containers/: docker-compose-services-dev.yaml  docker-compose-services-prod.yaml  docker-compose-services.yaml  docker-compose.yaml  docker-compose_multi-machine.yaml  docker-compose_single-machine.yaml  multi_machine_iptables_config.txt  run_docker_compose.sh  run_docker_compose_dev.sh  run_docker_compose_prod.sh
service_containers/deployment_config/etc_mosquitto/: add_certs_onetime.sh  local_mosquitto.conf  pw.backup
service_containers/deployment_config/on_server/: letsencrypt_deploy_hook.sh  letsencrypt_deploy_hook.sh.template
src/: __init__.py  main.py
src/assets/db_migrations/: 0baf970d7eb2_insert_default_asset_types.py  c4a6bfa6b100_create_dormant_column_asset_table.py
src/assets/db_models/: asset.py  asset_attribute.py  asset_license.py  asset_type.py  asset_usage.py  media_tag.py  tag.py
src/assets/http/: schema.py  validation.py
src/assets/services/: asset.py  asset_license.py
src/assets/tests/: asset_test.py
src/authentication/db_models/: user_session.py
src/authentication/http/: schema.py  validation.py
src/authentication/services/: auth.py
src/authentication/tests/: auth_test.py
src/event_archive/: main.py  subscriber.py  writer.py
src/event_archive/actions/: event.py
src/event_archive/config/: mongodb.py
src/event_archive/db/: async_session.py
src/files/: file_handling.py
src/global_config/: __init__.py  config_16_01_2025.py  database.py  db_context.py  env.py  logger.py  schema.py
src/upstage_backend/: main.py
src/upstage_stats/: mqtt.py
standalone_service_containers/: Dockerfile.svc  docker-compose.yaml  run_docker_compose.sh  run_health_check.sh
standalone_service_containers/mqtt_server/: pw.txt
streaming_containers/: run_docker_compose.sh
system/mqtt_server/: local_mosquitto.conf  pw.txt
tests/: __init__.py  conftest.py  pytest.ini
tests/event_archive_tests/: __init__.py  test_writer_and_stage_flow.py
tests/unit/: conftest.py  test_demo_bootstrap.py  test_media_exit_attributes.py  test_smoke.py  test_stage_assignment_exit_settings.py  test_stage_visibility_guard.py
(+191 files in other folders)
